# realtime

backend/: Cargo.toml  build.rs
backend/src/: main.rs
backend/src/proto/: temperature.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  ws.ts
frontend/src/components/: TempChart.tsx
frontend/src/proto/: temperature.ts
proto/: temperature.proto
sensors/: go.mod  main.go
sensors/proto/: temperature.pb.go
